--- a/HMConConsole.csproj
+++ b/HMConConsole.csproj
@@ -2,19 +2,15 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <ApplicationIcon>Resources\appicon.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Aspose.3D" Version="21.4.0" />
     <PackageReference Include="System.Resources.Extensions" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\HMCon3DModule\HMCon3DModule.csproj" />
-    <ProjectReference Include="..\HMConImageModule\HMConImageModule.csproj" />
-    <ProjectReference Include="..\HMConMCModule\HMConMCModule.csproj" />
     <ProjectReference Include="..\HMCon\HMCon.csproj" />
   </ItemGroup>
 
