--- a/HMConConsole.csproj
+++ b/HMConConsole.csproj
@@ -2,18 +2,21 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <ApplicationIcon>Resources\appicon.ico</ApplicationIcon>
   </PropertyGroup>
-
+  
   <ItemGroup>
     <PackageReference Include="System.Resources.Extensions" Version="6.0.0" />
   </ItemGroup>
-
+  
   <ItemGroup>
+    <ProjectReference Include="..\HMCon3DModule\HMCon3DModule.csproj" />
+    <ProjectReference Include="..\HMConImageModule\HMConImageModule.csproj" />
+    <ProjectReference Include="..\HMConMCModule\HMConMCModule.csproj" />
     <ProjectReference Include="..\HMCon\HMCon.csproj" />
   </ItemGroup>
-
+  
   <ItemGroup>
     <Compile Update="Resources.Designer.cs">
       <DesignTime>True</DesignTime>
