--- a/TerrainFactoryConsole.csproj
+++ b/TerrainFactoryConsole.csproj
@@ -11,8 +11,8 @@
   </ItemGroup>
   
   <ItemGroup>
-    <ProjectReference Include="..\TerrainFactoryImageModule\TerrainFactoryImageModule.csproj" />
     <ProjectReference Include="..\TerrainFactory\TerrainFactory.csproj" />
+    <ProjectReference Include="..\TerrainFactoryBitmaps\TerrainFactoryBitmaps.csproj" />
   </ItemGroup>
 
   <Target Name="SpicNSpan" AfterTargets="Clean">
